@@ -1,4 +1,6 @@
 2010-10-28  Paul Lesniewski <paul@squirrelmail.org>
+	* Increased default buffer sizes.
+
 	* Fixed possible buffer overflow issue and a few other small
           issues, complements Jose Celestino.  Thanks also to Tomas
           Lindroos.
